@@ -40,6 +40,9 @@ Version 4.4.x is the latest version.  It workes on macOS 10.12 or later. Version
 * Updated image locations could sometimes be written with the wrong longitude
   reference.
 
+* fix crash that occured in the app was launched by dragging images onto
+  the app icon.
+
 ## GeoTag 4.5
 
 ### New Features
